[tool.poetry]
name = "mcedit-revived"
version = "0.1.0"
description = ""
authors = ["Shparki <murrmat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
arrow = "^0.17.0"
kivy-garden = "^0.1.4"
wheel = "^0.36.1"
docutils = "^0.16"
Pygments = "^2.7.3"
pypiwin32 = "^223"
"kivy-deps.sdl2" = "^0.3.1"
"kivy-deps.angle" = "^0.3.0"
"kivy-deps.gstreamer" = "^0.3.1"
kivy = {version = "^2.0.0-rc.4", source = "kivy"}
Pastebin = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pydocstyle = "^5.1.1"
coverage = "^5.3"
pytest = "^6.1.2"
Kivy-examples = "^1.11.1"

[[tool.poetry.source]]
name = "kivy"
url = "https://kivy.org/downloads/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
